{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 415,
  "lineage": "a2e0d9f5-6175-aa42-81b6-21c9696556cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:internet-gateway/igw-0a2db60f030b7e20a",
            "id": "igw-0a2db60f030b7e20a",
            "owner_id": "559050238253",
            "tags": {
              "Name": "Custom-IGW"
            },
            "tags_all": {
              "Name": "Custom-IGW"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559050238253:loadbalancer/app/webapp-alb/138baa139b638af1",
            "arn_suffix": "app/webapp-alb/138baa139b638af1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-1928599500.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:559050238253:loadbalancer/app/webapp-alb/138baa139b638af1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0796dbee288bde07e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024901c1e2a653f82"
              },
              {
                "subnet_id": "subnet-08664b0661a354c21"
              },
              {
                "subnet_id": "subnet-0d6bb864f43a58270"
              }
            ],
            "subnets": [
              "subnet-024901c1e2a653f82",
              "subnet-08664b0661a354c21",
              "subnet-0d6bb864f43a58270"
            ],
            "tags": {
              "Name": "WebApp-ALB"
            },
            "tags_all": {
              "Name": "WebApp-ALB"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.accessible",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559050238253:listener/app/webapp-alb/138baa139b638af1/735e9a27262055d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:559050238253:targetgroup/webapp-tg/2aafff14fbe43c21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559050238253:listener/app/webapp-alb/138baa139b638af1/735e9a27262055d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:559050238253:loadbalancer/app/webapp-alb/138baa139b638af1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp_lb",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.accessible",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559050238253:targetgroup/webapp-tg/2aafff14fbe43c21",
            "arn_suffix": "targetgroup/webapp-tg/2aafff14fbe43c21",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559050238253:targetgroup/webapp-tg/2aafff14fbe43c21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "WebApp-TG"
            },
            "tags_all": {
              "Name": "WebApp-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2db60f030b7e20a",
            "id": "r-rtb-0e2b5433f1ba3e68f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2b5433f1ba3e68f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.accessible_rt",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "accessible_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:route-table/rtb-0e2b5433f1ba3e68f",
            "id": "rtb-0e2b5433f1ba3e68f",
            "owner_id": "559050238253",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Accessible-Route-Table"
            },
            "tags_all": {
              "Name": "Accessible-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "restricted_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:route-table/rtb-02ab533e3dc72e795",
            "id": "rtb-02ab533e3dc72e795",
            "owner_id": "559050238253",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Restricted-Route-Table"
            },
            "tags_all": {
              "Name": "Restricted-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "accessible_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8778061773976e2",
            "route_table_id": "rtb-0e2b5433f1ba3e68f",
            "subnet_id": "subnet-0d6bb864f43a58270"
          },
          "dependencies": [
            "aws_route_table.accessible_rt",
            "aws_subnet.accessible",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b293c2472927521d",
            "route_table_id": "rtb-0e2b5433f1ba3e68f",
            "subnet_id": "subnet-024901c1e2a653f82"
          },
          "dependencies": [
            "aws_route_table.accessible_rt",
            "aws_subnet.accessible",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0581036c51c658d46",
            "route_table_id": "rtb-0e2b5433f1ba3e68f",
            "subnet_id": "subnet-08664b0661a354c21"
          },
          "dependencies": [
            "aws_route_table.accessible_rt",
            "aws_subnet.accessible",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "restricted_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a9be690fc989ae",
            "route_table_id": "rtb-02ab533e3dc72e795",
            "subnet_id": "subnet-0751d83c97995209b"
          },
          "dependencies": [
            "aws_route_table.restricted_rt",
            "aws_subnet.restricted",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf9121968ff4c7c",
            "route_table_id": "rtb-02ab533e3dc72e795",
            "subnet_id": "subnet-07478f4be2e5aa92b"
          },
          "dependencies": [
            "aws_route_table.restricted_rt",
            "aws_subnet.restricted",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc19818e2df2a0c2",
            "route_table_id": "rtb-02ab533e3dc72e795",
            "subnet_id": "subnet-071ec4d9ecdc244c9"
          },
          "dependencies": [
            "aws_route_table.restricted_rt",
            "aws_subnet.restricted",
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:security-group/sg-0676f1130ea0cea07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0676f1130ea0cea07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0796dbee288bde07e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20250407151655316400000005",
            "name_prefix": "terraform-",
            "owner_id": "559050238253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Custom-Network-Application-SG"
            },
            "tags_all": {
              "Name": "Custom-Network-Application-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:security-group/sg-016868d67ecf847db",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016868d67ecf847db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0676f1130ea0cea07"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "559050238253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security Group"
            },
            "tags_all": {
              "Name": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.application_sg",
            "aws_security_group.load_balancer_sg",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:security-group/sg-0796dbee288bde07e",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0796dbee288bde07e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "559050238253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load-Balancer-SG"
            },
            "tags_all": {
              "Name": "Load-Balancer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "accessible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-0d6bb864f43a58270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bb864f43a58270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Accessible-Subnet-1"
            },
            "tags_all": {
              "Name": "Accessible-Subnet-1"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-024901c1e2a653f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024901c1e2a653f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Accessible-Subnet-2"
            },
            "tags_all": {
              "Name": "Accessible-Subnet-2"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-08664b0661a354c21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08664b0661a354c21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Accessible-Subnet-3"
            },
            "tags_all": {
              "Name": "Accessible-Subnet-3"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-0751d83c97995209b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751d83c97995209b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Restricted-Subnet-1"
            },
            "tags_all": {
              "Name": "Restricted-Subnet-1"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-07478f4be2e5aa92b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07478f4be2e5aa92b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Restricted-Subnet-2"
            },
            "tags_all": {
              "Name": "Restricted-Subnet-2"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:subnet/subnet-071ec4d9ecdc244c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ec4d9ecdc244c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Restricted-Subnet-3"
            },
            "tags_all": {
              "Name": "Restricted-Subnet-3"
            },
            "vpc_id": "vpc-0421ce3667cf1f8af"
          },
          "dependencies": [
            "aws_vpc.network",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050238253:vpc/vpc-0421ce3667cf1f8af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b66fb492113bba9",
            "default_route_table_id": "rtb-00f1b0e8f5270b3ee",
            "default_security_group_id": "sg-03313cb3909c65a61",
            "dhcp_options_id": "dopt-0595db59d303ab709",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0421ce3667cf1f8af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f1b0e8f5270b3ee",
            "owner_id": "559050238253",
            "tags": {
              "Name": "Custom-Network"
            },
            "tags_all": {
              "Name": "Custom-Network"
            }
          }
        }
      ]
    }
  ]
}